# unexzellent.de

./: .gitignore  build.sh  index.html
.github/workflows/: deployPage.yml
assets/js/exmatriculation/: exmatriculation.d.ts  exmatriculation.js  exmatriculation_bg.wasm  exmatriculation_bg.wasm.d.ts  package.json
exmatriculation/: .gitignore  Cargo.toml
exmatriculation/assets/js/exmatriculation/: exmatriculation_wrapper.js
exmatriculation/src/: lib.rs
