[package]
name = "exmatriculation"
version = "0.1.0"
edition = "2018"
authors = ["Robin Marchart"]

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2.74"
wee_alloc =  "0.4.5"
web-sys={version="0.3.51",features=["Blob"]}
js-sys="0.3.51"
console_error_panic_hook = {version="0.1.6", optional=true}
printpdf="0.4.0"

[features]
panic_hook=["console_error_panic_hook"]
default=["panic_hook"]

[profile.release]
opt-level = "s"
